--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -121,17 +121,16 @@ Múltiples formas de instalación y el mejor servicio al estilo Bremsen.cl</p>
   <div id="product-tab" class="product-tab">
 
     <ul id="tabs" class="tabs">
-      <li><a (click)="activaSugeridos()">Sugeridos</a></li>
-      <li><a (click)="activaOfertas()">Ofertas</a></li>
+      <li>Sugeridos</li>
     </ul>
   </div>
-<owl-carousel #owlElement [options]="{dots: false, navigation: true}" [items]="productos" *ngIf="productos.length>0">
+<owl-carousel #owlElement [options]="{dots: true, navigation: true}" [items]="productos" *ngIf="productos.length>0">
 
       <div class="product-thumb" *ngFor="let producto of productos">
       <div class="image" style="line-height: 40px;"><a routerLink="/producto/{{producto.ID}}"><img src="assets/image/product/540x576.jpg" class="img-responsive responsivo" /></a></div>
       <div class="caption">
           <h4><a routerLink="/producto/{{producto.ID}}">{{producto.MARCA}} {{producto.MODELO}}</a></h4>
-          <p class="price"> $ {{producto.PRECIO_FINAL}} </p>
+          <p class="price">{{producto.PRECIO_FINAL | number | currencyFormat}} </p>
       </div>
       <div>
         <button class="btn btn-primary" routerLink="/producto/{{producto.ID}}"><span>Ver producto</span></button>
