logosOK y responsivo stuff

--- a/src/app/components/categoria-filtrada/categoria-filtrada.component.html
+++ b/src/app/components/categoria-filtrada/categoria-filtrada.component.html
@@ -152,7 +152,7 @@
                         <img src="assets/image/product/540x576.jpg" width="220px" alt=" Strategies for Acquiring Your Own Laptop " title="" class="img-responsive" />
                       </a>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 pad-responsivo">
                   <div class="caption">
                     <div class="oferta-inst" style="background: #fff; padding-left:0px;">
                         <!-- va a variar 2 fotos 1."oferta instantania" ó 2."Instatania rapida"
