--- a/src/app/components/categoria-no-filtrada/categoria-no-filtrada.component.html
+++ b/src/app/components/categoria-no-filtrada/categoria-no-filtrada.component.html
@@ -74,11 +74,11 @@
     <div id="content" class="col-sm-9">
 
 
-        <div class="" style="padding-top: 20px;">
+        <div class="" style="padding-top: 28px;">
 
             <ul class="nav nav-tabs" role="tablist">
-              <li role="presentation" style="width: 50%" class="active text-center"><a href="#comprarAro" aria-controls="comprarAro" role="tab" data-toggle="tab"><b style="font-size: 16px; text-transform: uppercase; ">Comprar por Aro</b></a></li>
-              <li role="presentation" style="width: 50%" class="text-center"><a href="#comprarMedida" aria-controls="comprarMedida" role="tab" data-toggle="tab"><b style="font-size: 16px; text-transform: uppercase; ">Comprar por medida</b></a></li>
+              <li role="presentation" style="width: 50%" class="active text-center"><a href="#comprarAro" aria-controls="comprarAro" role="tab" data-toggle="tab"><b style="font-size: 17.8px; text-transform: uppercase; ">Comprar por Aro</b></a></li>
+              <li role="presentation" style="width: 50%" class="text-center"><a href="#comprarMedida" aria-controls="comprarMedida" role="tab" data-toggle="tab"><b style="font-size: 17.8px; text-transform: uppercase; ">Comprar por medida</b></a></li>
             </ul>
 
 
@@ -189,7 +189,7 @@
                         <img src="assets/image/product/540x576.jpg" width="220px" alt=" Strategies for Acquiring Your Own Laptop " title="" class="img-responsive" />
                       </a>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 pad-responsivo">
                   <div class="caption">
                     <div *ngIf="producto.OFERTA == 'Si'"  class="oferta-inst" style="background: #fff; padding-left:0px;">
 
