--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -120,9 +120,9 @@ Múltiples formas de instalación y el mejor servicio al estilo Bremsen.cl</p>
           <!-- Product Tab Start -->
   <div id="product-tab" class="product-tab">
 
-    <ul id="tabs" class="tabs">
-      <li>Sugeridos</li>
-    </ul>
+    
+     <h1 class="text-center">Sugeridos</h1>
+    
   </div>
 <owl-carousel #owlElement [options]="{dots: true, navigation: true}" [items]="productos" *ngIf="productos.length>0">
 
