--- a/src/app/components/bremsen/bremsen.component.html
+++ b/src/app/components/bremsen/bremsen.component.html
@@ -67,7 +67,7 @@
     </div>
 
 </div>
-<div class="container-fluid" style=" padding: 40px 0px; background: #1e1e1e; margin-bottom:-80px;">
+<div class="container-fluid" id="contacto" style=" padding: 40px 0px; background: #1e1e1e; margin-bottom:-80px;">
     <div class="container">
         <div class="row">
             <div class="col-md-1"></div>
