--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,12 +7,14 @@
             <img alt="" class="img-responsive" src="assets/image/logo-small.png">
           </div>
           <div class="column col-lg-3 col-md-3 col-sm-3 col-xs-12">
-            <h5>Contáctanos</h5>
+            <h5><a routerLink="/bremsen">Contáctanos</a></h5>
             <table>
               <tr>
                   <td><a target="_blank" href="https://www.facebook.com/bremsen.santiago.1"><i style="font-size: 28px;" class="fa fa-facebook-square" aria-hidden="true"></i></a></td>
                   <td>&nbsp; &nbsp;  &nbsp;</td>
                    <td><a target="_blank" href="https://www.instagram.com/bremsen.cl/"><i style="font-size: 28px;" class="fa fa-instagram" aria-hidden="true"></i></a></td>
+                   <td>&nbsp; &nbsp;  &nbsp;</td>
+                   <td><a target="_blank" href="https://twitter.com/BremsenCl"><i style="font-size: 28px;" class="fa fa-twitter-square" aria-hidden="true"></i></a></td>
               </tr>
             </table>
 
