--- a/src/app/components/carro/carro.component.html
+++ b/src/app/components/carro/carro.component.html
@@ -77,7 +77,7 @@
 
        <h2 class="titulo-light subtile" *ngIf="incluyeInstalacion">2- Elige tu Despacho o Instalación</h2>
        <div class="col-md-12 gris" style="padding: 10px;" *ngIf="incluyeInstalacion">
-       					<p>Haz click en el tipo de instalación que deseas. Conoce más <a href="#"><b style="color:#6b8bc0;">Aquí</b></a></p>
+       					<p>Haz click en el tipo de instalación que deseas. Conoce más <a target="_blank" routerLink="/instalacion"><b style="color:#6b8bc0;">Aquí</b></a></p>
        				</div>
 
        <div class=" col-md-12 borderCaja" *ngIf="incluyeInstalacion">
