--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 
 
-<div class=" bg-home container-fluid" style="padding: 0px 74px;"> <!-- pasar el css-->
+<div class=" bg-home container-fluid" style="padding: 0px 50px;"> <!-- pasar el css-->
 <div class="container">
     <div class="row">
         <div class="col-md-12">
@@ -133,7 +133,7 @@ Múltiples formas de instalación y el mejor servicio al estilo Bremsen.cl</p>
           <p class="price">{{producto.PRECIO_FINAL | number | currencyFormat}} </p>
       </div>
       <div>
-        <button class="btn btn-primary" routerLink="/producto/{{producto.ID}}"><span>Ver producto</span></button>
+        <button class="btn btn-primary btn-sm" routerLink="/producto/{{producto.ID}}"><span>Ver producto</span></button>
       </div>
     </div>
 
@@ -168,7 +168,7 @@ Múltiples formas de instalación y el mejor servicio al estilo Bremsen.cl</p>
             <div class="col-md-6">
                <img class="img-responsive center-block " src="assets/image/BANNERS_mt-home.jpg">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 pad-upDown">
                  <img class="img-responsive center-block " src="assets/image/BANNERS_oferta-runflat.jpg">
             </div>
           </div>
