--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -1,3 +1,57 @@
-<p>
-  blog works!
-</p>
+<div id="container">
+    <div class="container">
+      <!-- Breadcrumb Start-->
+      <ul class="breadcrumb">
+        <li><a href="index.html"><i class="fa fa-home"></i></a></li>
+        <li><a href="blog.html">Blog</a></li>
+      </ul>
+      <!-- Breadcrumb End-->
+      <div class="row">
+        <!--Middle Part Start-->
+        <div id="content" class="col-sm-9">
+          <h1 class="title">Blog</h1>
+          <div class="blog">
+          <div class="blog-entry">
+  <div class="image"> <a href="#"><img class="img-responsive" src="assets/image/blog/post-1.jpg" alt=""></a> </div>
+  <h3 class="post_title_blog"><a href="#">Volutpat Dignissim Dolor Sed Luctur Ullamcoper Nissi</a></h3>
+  <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmod tempor incididunt ut labore et dolore magna aliqua. Class aptent taciti sociosqu ad litora torquent…</p>
+  <a href="#" class="btn btn-primary">Leer más</a> </div>
+
+
+  <div class="blog-entry">
+  <div class="image"> <a href="#"><img class="img-responsive" src="assets/image/blog/post-2.jpg" alt=""></a> </div>
+  <h3 class="post_title_blog"><a href="#">Proin Volutpat Dignissim Dolor Sed Luctur Ullamcoper Nissi</a></h3>
+  <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmod tempor incididunt ut labore et dolore magna aliqua. Class aptent taciti sociosqu ad litora torquent…</p>
+  <a href="#" class="btn btn-primary">Leer más</a> </div>
+
+
+  <div class="blog-entry">
+  <div class="image"> <a href="#"><img class="img-responsive" src="assets/image/blog/post-3.jpg" alt=""></a> </div>
+  <h3 class="post_title_blog"><a href="#">Volutpat Dignissim Dolor Sed Luctur Ullamcoper Nissi</a></h3>
+  <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmod tempor incididunt ut labore et dolore magna aliqua. Class aptent taciti sociosqu ad litora torquent…</p>
+  <a href="#" class="btn btn-primary">Leer más</a> </div>
+
+                
+          
+          <div class="row">
+            <div class="col-sm-6 text-left">
+              <ul class="pagination">
+                <li class="active"><span>1</span></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">&gt;</a></li>
+                <li><a href="#">&gt;|</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-6 text-right">Mostrando 1 to 12 of 15</div>
+          </div>
+          </div>
+        </div>
+        <!--Middle Part End -->
+        <!--Right Part Start -->
+        <aside id="column-right" class="col-sm-3 hidden-xs">
+ 
+        </aside>
+        <!--Right Part End -->
+      </div>
+    </div>
+  </div>
