--- a/src/app/components/bremsen/bremsen.component.html
+++ b/src/app/components/bremsen/bremsen.component.html
@@ -37,7 +37,6 @@
 
 <div class="container">
 
-    <!-- Brand Logo Carousel Start-->
     <div id="carousel" class="owl-carousel nxt">
         <div class="item text-center">
             <img src="assets/image/testimonio-01.jpg" alt="" class="img-responsive" />
@@ -59,7 +58,7 @@
             <img src="assets/image/testimonio-05.jpg" alt="" class="img-responsive" />
         </div>
         <div class="item text-center">
-            <img src="image/testimonio-06.jpg" alt="" class="img-responsive" />
+            <img src="assets/image/testimonio-06.jpg" alt="" class="img-responsive" />
         </div>
         <div class="item text-center">
             <img src="assets/image/testimonio-07.jpg" alt="" class="img-responsive" />
@@ -67,6 +66,7 @@
     </div>
 
 </div>
+
 <div class="container-fluid" id="contacto" style=" padding: 40px 0px; background: #1e1e1e; margin-bottom:-80px;">
     <div class="container">
         <div class="row">
@@ -118,7 +118,10 @@
                     <tbody><tr>
                         <td><a style="color:#fff;" href="https://www.facebook.com/bremsen.santiago.1" target="_blank"><i aria-hidden="true" class="fa fa-facebook-square" style="font-size: 28px;"></i></a></td>
                         <td>&nbsp; &nbsp;  &nbsp;</td>
-                         <td><a style="color:#fff;" href="https://www.instagram.com/bremsen.cl/" target="_blank"><i aria-hidden="true" class="fa fa-instagram" style="font-size: 28px;"></i></a></td>
+                         
+                        <td><a style="color:#fff;" href="https://www.instagram.com/bremsen.cl/" target="_blank"><i aria-hidden="true" class="fa fa-instagram" style="font-size: 28px;"></i></a></td>
+                        <td>&nbsp; &nbsp;  &nbsp;</td>
+                        <td><a style="color:#fff;" href="https://twitter.com/BremsenCl" target="_blank"><i aria-hidden="true" class="fa fa-twitter-square" style="font-size: 28px;"></i></a></td>
                     </tr>
                   </tbody>
                 </table>
