--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -97,9 +97,19 @@
             <div class="col-md-7">
              <div class="pad-15">&nbsp;</div>
                 <h1>Bienvenido!</h1>
-                <p>Ya tienes una cuenta en <b>Bremsen</b>, ahora podras comprar tus neumáticos más facil.</p>
+                <p>Registrando tus datos podrás agilizar futuras compras y obtener ofertas personalizadas. Desde tu cuenta podrás editar tu datos, ver tu historial de compras y registrar datos de facturación.
+                   Si necestias ayuda contactanos a <a href="mailto:ventas@bremsen.cl">ventas@bremsen.cl</a> </p>
                 <br>
-                  <a href="index.html">  <button class="btn btn-default"><span>Ir a comprar</span></button></a>
+                  
+                  
+
+
+                  <table class="table">
+                      <tr>
+                        <td><a href="index.html">  <button class="btn btn-default"><span>Ir a comprar</span></button></a></td>
+                        <td><a routerLink="/misdatos">  <button class="btn btn-default"><span>Ir a comprar</span></button></a></td>
+                      </tr>
+                  </table>
 
             </div>
       </div>
