--- a/src/assets/css/stylesheet.css
+++ b/src/assets/css/stylesheet.css
@@ -1042,6 +1042,59 @@ visibility:hidden;
 	.bremsen3  {background-color:#383838; color:#ffffff; text-transform: uppercase;}
 	h1.nuestros-servicios  { text-transform: uppercase;  font-size: 50px; }
 
+	.owl-dots {
+		text-align: center;
+		padding-top:18px;
+		bottom: 5px;
+		width: 100%;
+		-webkit-backface-visibility: hidden;
+		-moz-backface-visibility: hidden;
+		-ms-backface-visibility: hidden;
+		backface-visibility: hidden;
+	}
+	
+	.owl-dot {
+		border-radius: 50px;
+		height: 10px;
+		width: 10px;
+		display: inline-block;
+		background: rgba(127,127,127, 0.5);
+		margin-left: 5px;
+		margin-right: 5px;
+	}
+	
+	.owl-dot.active {
+		background: rgba(127,127,127, 1);
+	}
+
+
+	.owl-theme .owl-controls .owl-nav [class*=owl-]{
+		color:#fff;
+		font-size:14px;
+		margin:5px;
+		padding:4px 7px;
+		background:#d6d6d6;
+		display:inline-block;
+		cursor:pointer;
+		-webkit-border-radius:3px;
+		-moz-border-radius:3px;
+		border-radius:3px
+		}
+		
+		.owl-theme .owl-controls .owl-nav [class*=owl-]:hover{
+		background:#869791;
+		color:#fff;
+		text-decoration:none
+		}
+		
+		.owl-theme .owl-controls .owl-nav .disabled{
+		opacity:.5;
+		cursor:default
+		}
+		
+		.owl-th
+
+
 	.volver { float: left; }
 	@media (max-width: 460px) {
   		 .video { width: 360px; height:203px; }
@@ -1055,6 +1108,11 @@ visibility:hidden;
 
 	@media (max-width: 990px) {
 		.noView { display: none; }
+	}
+
+
+	@media (min-width: 990px) {
+		.View { display: none; }
 	}
 
 
