--- a/src/app/components/carro/carro.component.html
+++ b/src/app/components/carro/carro.component.html
@@ -124,7 +124,7 @@
               <a href="#intalacion-domicilio" (click)="tipoInstalacionBoton(1)" aria-controls="intalacion-domicilio" role="tab" data-toggle="tab">
                 <img class="img-responsive center-block noView" src="assets/image/Instalacion-a-domicilio-04.png">
                   <h4 class="tabs-h4"><b>Instalación a domicilio</b></h4>
-                  <button type="button" class="btn btn-sm btn-default bremsen" (click)="tipoInstalacionBoton(1)">{{costoInstalacion  | number | currencyFormat}}</button>
+                  <button type="button" class="btn btn-sm btn-default bremsen" (click)="tipoInstalacionBoton(1)">{{valorinstalacionUno  | number | currencyFormat}}</button>
 
                 </a>
 
@@ -137,7 +137,7 @@
                <a href="#retiramos-autos" (click)="tipoInstalacionBoton(2)" aria-controls="retiramos-autos" role="tab" data-toggle="tab">
                  <img class="img-responsive center-block noView" src="assets/image/retiro-a-domicilio-05.png">
                         <h4 class="tabs-h4"><b>Retiramos tu auto</b></h4>
-                          <button type="button" class="btn btn-sm btn-default bremsen " (click)="tipoInstalacionBoton(2)">$ 40.000</button>
+                          <button type="button" class="btn btn-sm btn-default bremsen " (click)="tipoInstalacionBoton(2)">{{valorinstalacionDos | number | currencyFormat}}</button>
                       </a>
 
 
@@ -151,7 +151,7 @@
                     <img class="img-responsive center-block noView" src="assets/image/talleres-asociados-06.png">
                     <h4 class="tabs-h4"><b>Talleres asociados</b></h4>
 
-                     <button type="button" class="btn btn-sm btn-default bremsen " (click)="tipoInstalacionBoton(3)">$ 0</button>
+                     <button type="button" class="btn btn-sm btn-default bremsen " (click)="tipoInstalacionBoton(3)">{{valorinstalacionTres | number | currencyFormat}}</button>
 
                 </a>
 
@@ -161,7 +161,7 @@
                  <a href="#despacho-adomicilio" (click)="tipoInstalacionBoton(4)" aria-controls="despacho-adomicilio" role="tab" data-toggle="tab">
                               <img class="img-responsive center-block noView" src="assets/image/despacho-a-domicilio-07.png">
                               <h4 class="tabs-h4"><b>Despacho a domicilio</b></h4>
-                                  <button type="button" class="btn btn-sm btn-default bremsen " (click)="tipoInstalacionBoton(4)">$ 40.000</button>
+                                  <button type="button" class="btn btn-sm btn-default bremsen " (click)="tipoInstalacionBoton(4)">{{valorinstalacionCuatro | number | currencyFormat}}</button>
 
 
               </a>
