--- a/src/app/components/categoria-filtrada/categoria-filtrada.component.html
+++ b/src/app/components/categoria-filtrada/categoria-filtrada.component.html
@@ -206,7 +206,7 @@
               </td>
             </tr>
             <tr style="text-align:right; ">
-              <td><button type="submit" class="btn btn-default bremsen " routerLink="/producto/{{producto.ID}}">Comprar</button></td>
+              <td><button type="submit" class="btn btn-default bremsen " (click)="agregarCarro(1,selectCantidad.value,producto.ID)">Comprar</button></td>
               <td> <button type="button" class="btn btn-primary"  (click)="agregarCarro(2,selectCantidad.value,producto.ID)"  data-toggle="modal" data-target="#myModal">
                   <i class="fa fa-plus" aria-hidden="true"></i> Carro
               </button></td>
