--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -11,29 +11,19 @@
         <div id="content" class="col-sm-9">
           <h1 class="title">Blog</h1>
           <div class="blog">
-          <div class="blog-entry">
-  <div class="image"> <a href="#"><img class="img-responsive" src="assets/image/blog/post-1.jpg" alt=""></a> </div>
-  <h3 class="post_title_blog"><a href="#">Volutpat Dignissim Dolor Sed Luctur Ullamcoper Nissi</a></h3>
-  <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmod tempor incididunt ut labore et dolore magna aliqua. Class aptent taciti sociosqu ad litora torquent…</p>
-  <a href="#" class="btn btn-primary">Leer más</a> </div>
+
+          <div class="blog-entry" *ngFor="let blog of blogs"> 
+  <div class="image"> <a href="#"><img class="img-responsive" src="{{blog.fotoprincipal}}" alt=""></a> </div>
+  <h3 class="post_title_blog"><a href="#">{{blog.titulo}}</a></h3>
+  <p class="description">{{blog.contenido | slice:0:100}}</p>
+  <a routerLink="/contenido/{{blog.id}}" class="btn btn-primary">Leer más</a> </div>
 
 
-  <div class="blog-entry">
-  <div class="image"> <a href="#"><img class="img-responsive" src="assets/image/blog/post-2.jpg" alt=""></a> </div>
-  <h3 class="post_title_blog"><a href="#">Proin Volutpat Dignissim Dolor Sed Luctur Ullamcoper Nissi</a></h3>
-  <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmod tempor incididunt ut labore et dolore magna aliqua. Class aptent taciti sociosqu ad litora torquent…</p>
-  <a href="#" class="btn btn-primary">Leer más</a> </div>
 
-
-  <div class="blog-entry">
-  <div class="image"> <a href="#"><img class="img-responsive" src="assets/image/blog/post-3.jpg" alt=""></a> </div>
-  <h3 class="post_title_blog"><a href="#">Volutpat Dignissim Dolor Sed Luctur Ullamcoper Nissi</a></h3>
-  <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmod tempor incididunt ut labore et dolore magna aliqua. Class aptent taciti sociosqu ad litora torquent…</p>
-  <a href="#" class="btn btn-primary">Leer más</a> </div>
 
                 
           
-          <div class="row">
+          <!--div class="row">
             <div class="col-sm-6 text-left">
               <ul class="pagination">
                 <li class="active"><span>1</span></li>
@@ -43,7 +33,7 @@
               </ul>
             </div>
             <div class="col-sm-6 text-right">Mostrando 1 to 12 of 15</div>
-          </div>
+          </div-->
           </div>
         </div>
         <!--Middle Part End -->
