--- a/src/app/components/bremsen/bremsen.component.html
+++ b/src/app/components/bremsen/bremsen.component.html
@@ -17,7 +17,7 @@
                         ¡nosotros nos encargamos del resto!</b>
                     </p>
                     <br>
-                    <i style="color:#e00034;">Tomás Zuñiga - Cristian Ogaz</i>
+                    <i style="color:#e00034;">Tomás Zúñiga - Cristian Ogaz</i>
                 </div>
             </div>
 
