arreglo falla header

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -145,7 +145,8 @@ slideSpeed : 300, paginationSpeed : 400, singleItem : true}" [items]="productos"
 
 
 <style>
-    .owl-carousel .owl-nav { display: block !important;}
+    .owl-carousel .owl-nav.disabled { display: block !important;}
+    .disabled { display: block !important;}
 </style>
 
 <br>
