--- a/src/app/components/bremsen/bremsen.component.html
+++ b/src/app/components/bremsen/bremsen.component.html
@@ -1,6 +1,8 @@
+<div id="container" style="background:#000;">
 <div class=" bg-bremsen container-fluid">
     <!-- pasar el css-->
     <div class="container">
+        <br>
         <div class="pad-50">&nbsp;</div>
         <div class="row">
             <div class="col-md-6 blanco" style="padding:5%;">
@@ -67,7 +69,7 @@
 
 </div>
 
-<div class="container-fluid" id="contacto" style=" padding: 40px 0px; background: #1e1e1e; margin-bottom:-80px;">
+<div class="container-fluid" id="contacto" style=" background: #1e1e1e; padding:40px 0px; margin-bottom:-100px;">
     <div class="container">
         <div class="row">
             <div class="col-md-1"></div>
@@ -135,7 +137,7 @@
     </div>
 </div>
 
-
+</div>
 
 
 
@@ -149,4 +151,5 @@
         border-bottom: 2px solid #fff !important;
         border-radius: 0px !important;
     }
+      
 </style>
