--- a/src/app/components/instalacion/instalacion.component.html
+++ b/src/app/components/instalacion/instalacion.component.html
@@ -1,10 +1,10 @@
 <div id="container">
   <div class="container">
-
+<br>
     <div class="row">
 
       <div class="col-md-12">
-        <ul class="breadcrumb">
+        <ul class="breadcrumb" style="padding-top:16px;">
           <li>
             <a routerLink="/">
               <i class="fa fa-home"></i>
