--- a/src/app/components/carro/carro.component.html
+++ b/src/app/components/carro/carro.component.html
@@ -115,7 +115,9 @@
     <div class="col-md-6">&nbsp;</div>
 
     <div class="col-md-12" *ngIf="activaInstalacion">
-
+            <div *ngIf="activaErrorNoDisponible" style="font-size: 20px;  text-align: center; padding-top: 39px; padding-bottom: 18px; color: #4a4a4a;">
+                  No tenemos opciones disponibles para el destino de despacho o instalación seleccionado
+            </div>  
             <div class="pest-home">
 
             <ul class="nav nav-tabs" role="tablist">
@@ -174,7 +176,7 @@
 
             <div class="tab-content" style="background: #fff; padding-left: 0px;">
 
-              <div role="tabpanel" class="tab-pane active" id="intalacion-domicilio">
+              <div role="tabpanel" class="tab-pane active" id="intalacion-domicilio" *ngIf="!activaErrorNoDisponible">
                 <form name="form" (ngSubmit)="finstalacion1.form.valid && guardaInstalacion1()" #finstalacion1="ngForm" novalidate>
                   <div class="col-md-6" style="padding-left: 0px;">
 
@@ -267,6 +269,11 @@
                 		<label for="date" class="control-label">Elige tu fecha de instalación</label>
 							<div class="input-group date">
 							  <input type="text" class="form-control" id="date" data-date-format="YYYY-MM-DD" value="2018-02-20" name="fechaInstalacionvalue" #fechaInstalacion="ngModel" [(ngModel)]="fechaInstalacionvalue" required>
+                <script>
+                     $('#date').datetimepicker({
+                          pickTime: false
+                      });
+                </script>
 							  <span class="input-group-btn">
 							  <button style="padding: 10.1px;" type="button" class="btn btn-default"><i class="fa fa-calendar"></i></button>
 							  </span>
@@ -382,7 +389,7 @@
                 <tr>
                  <td></td>
                   <td  class="text-right">
-                  	<button type="button" class="btn btn-default btn-block" (click)="checking()">Continuar con tu pedido</button><br>
+                  	<button *ngIf="!activaErrorNoDisponible" type="button" class="btn btn-default btn-block" (click)="checking()">Continuar con tu pedido</button><br>
                    <!--a href="#"><small>¿Aun no tienes cuenta?</small></a><br>
                    <button type="button" class="btn btn-primary btn-block">Comprar como visita</button-->
                   </td>
