--- a/src/app/components/categoria-filtrada/categoria-filtrada.component.html
+++ b/src/app/components/categoria-filtrada/categoria-filtrada.component.html
@@ -1,7 +1,8 @@
   <div id="container">
+    <br>
     <div class="container">
       <!-- Breadcrumb Start-->
-      <ul class="breadcrumb">
+      <ul class="breadcrumb" style="padding-top:16px;">
        <li><a routerLink="/home"><i class="fa fa-home"></i></a></li>
         <li><a routerLink="/filtrada/{{parametros.param1}}/{{parametros.param2}}/{{parametros.param3}}/{{parametros.origen}}">Pagina actual</a></li>
       </ul>
