--- a/src/app/components/preguntas/preguntas.component.html
+++ b/src/app/components/preguntas/preguntas.component.html
@@ -2,10 +2,10 @@
  <div id="container">
 
     <div class="container">
-
+<br>
             <div class="row">
                   <div class="col-md-12">
-                    <ul class="breadcrumb">
+                    <ul class="breadcrumb" style="padding-top:16px;">
                       <li><a routerLink="/"><i class="fa fa-home"></i></a></li>
                       <li><a routerLink="/preguntas">Pagina actual</a></li>
                     </ul>
