--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -1,7 +1,9 @@
  <div id="container">
+  
     <div class="container">
+        <br><br>
       <!-- Breadcrumb Start-->
-      <ul class="breadcrumb">
+      <ul class="breadcrumb" style="padding-top:16px;">
         <li><a routerLink="/home"><i class="fa fa-home"></i></a></li>
         <li>Crear Cuenta</li>
       </ul>
