--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,7 +1,8 @@
   <div id="container">
     <div class="container">
+      <br>
       <!-- Breadcrumb Start-->
-      <ul class="breadcrumb">
+      <ul class="breadcrumb" style="padding:16px;">
        <li><a routerLink="/home"><i class="fa fa-home"></i></a></li>
         <li>Pagina actual</li>
       </ul>
