--- a/src/app/components/terminos/terminos.component.html
+++ b/src/app/components/terminos/terminos.component.html
@@ -1,10 +1,10 @@
-
+<br>
   <div id="container">
     <div class="container">
       <!-- Breadcrumb Start-->
 
 
-      <ul class="breadcrumb">
+      <ul class="breadcrumb" style="padding-top:16px;">
         <li><a routerLink="/"><i class="fa fa-home"></i></a></li>
         <li><a routerLink="/terminos">Pagina actual</a></li>
       </ul>
