--- a/src/app/components/categoria-no-filtrada/categoria-no-filtrada.component.html
+++ b/src/app/components/categoria-no-filtrada/categoria-no-filtrada.component.html
@@ -1,7 +1,8 @@
 <div id="container">
+  <br>
     <div class="container">
       <!-- Breadcrumb Start-->
-      <ul class="breadcrumb">
+      <ul class="breadcrumb" style="padding-top:16px;">
         <li><a routerLink="/home"><i class="fa fa-home"></i></a></li>
         <li><a routerLink="/categoria">Pagina actual</a></li>
       </ul>
