--- a/src/app/components/fracaso/fracaso.component.html
+++ b/src/app/components/fracaso/fracaso.component.html
@@ -23,7 +23,7 @@
           <div class="col-md-10">
            <div class="pad-15">&nbsp;</div>
               <h1>Transacción Rechazada</h1>
-              <h3>Su transacción número 188 no ha podido procesada</h3>
+              <h3>Su transacción número {{parametros.id}} no ha podido procesada</h3>
               <p>Las posibles causas de este rechazo son:</p>
 
               <ul>
