--- a/src/app/components/exito/exito.component.html
+++ b/src/app/components/exito/exito.component.html
@@ -36,7 +36,7 @@
                   </tr>
                   <tr>
                       <td>N° Orden de compra:</td>
-                      <td>167</td>
+                      <td>{{ parametros.id }}</td>
                   </tr>
                   <tr>
                       <td>Nombre del Comercio:</td>
