nuevas mejoras y correciones

--- a/src/app/components/blog/contenido/contenido.component.html
+++ b/src/app/components/blog/contenido/contenido.component.html
@@ -28,7 +28,7 @@
             <h3 class="post_title_blog">
               <a href="#">{{blog.titulo}}</a>
             </h3>
-            <p class="description">{{blog.contenido | slice:0:100}}</p>
+            <p class="description">{{blog.contenido}}</p>
             <a routerLink="/blog" class="btn btn-primary">Volver</a>
           </div>
 
