--- a/src/app/components/misdatos/misdatos.component.html
+++ b/src/app/components/misdatos/misdatos.component.html
@@ -25,28 +25,18 @@
               <h3>Historial de compra</h3><br>
               <table class="table" style="border: 1px solid #f2f2f2;">
                 <tr class="gris">
-                    <td>DETALLE</td>
+                    <td>ORDEN COMPRA</td>
                     <td>FECHA</td>
-                    <td>ESTADO</td>
-                    <td>COMPROBANTE</td>
+                    <td>MONTO</td>
+                    <td>TIPO PAGO</td>
                 </tr>
-                <tr class="borderTop">
-                    <td><p>Marca modelo</p></td>
-                    <td><p>10/09/2017</p></td>
-                    <td><p>Entregado</p></td>
-                    <td>
-                        <button type="submit" class="btn btn-default ">Descargar&nbsp;&nbsp;<i class="fa fa-download" aria-hidden="true"></i></button>
-
-                    </td>
+                <tr class="borderTop" *ngFor="let producto of historialCompra">
+                    <td><p>{{producto.orden}}</p></td>
+                    <td><p>{{producto.fecha}}</p></td>
+                    <td><p>{{producto.monto | number | currencyFormat}}</p></td>
+                    <td><p>{{producto.tipo}}</p></td>
                 </tr>
-                <tr class="borderTop">
-                     <td><p>Marca modelo</p></td>
-                     <td><p>10/09/2017</p></td>
-                    <td><p>Entregado</p></td>
-                    <td>
-                     <button type="submit" class="btn btn-default ">Descargar&nbsp;&nbsp;<i class="fa fa-download" aria-hidden="true"></i></button>
-                    </td>
-                </tr>
+             
               </table>
             </div>
           </div>
@@ -157,53 +147,73 @@
               <div class="col-md-9">
               <h3>Datos de facturación</h3>
               <p>Tus datos se mantendrán resguardados y solo serán utilizados para agilizar tus próximas compras</p><br>
-                   <div class="form-group required">
-                    <label for="">Razón Social</label>
-                    <input type="text" class="form-control" id="">
-                  </div>
+                  <form name="form" (ngSubmit)="f.form.valid && saveCheckin()" #f="ngForm" novalidate>
+                  
+                    <div>
+                  
+                      <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !razon.valid }">
+                        <label for="razon">Razon Social</label>
+                        <input type="text" class="form-control" id="razon" name="razon" #razon="ngModel" [(ngModel)]="cliente.razon" required>
+                        <div *ngIf="f.submitted && !razon.valid" class="help-block">Razon Social es requerido</div>
+                      </div>
+                  
+                      <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !rutempresa.valid }">
+                        <label for="">R.U.T de la empresa</label>
+                        <input type="text" class="form-control" id="rutempresa" name="rutempresa" #rutempresa="ngModel" [(ngModel)]="cliente.rutempresa"
+                          required>
+                        <div *ngIf="f.submitted && !razon.valid" class="help-block">Rut empresa es requerido</div>
+                      </div>
+                  
+                      <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !giro.valid }">
+                        <label for="">Giro</label>
+                        <input type="text" class="form-control" id="giro" name="giro" #giro="ngModel" [(ngModel)]="cliente.giro" required>
+                        <div *ngIf="f.submitted && !giro.valid" class="help-block">Giro es requerido</div>
+                      </div>
+                      <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !telefonoempresa.valid }">
+                        <label for="">Telefono</label>
+                        <input type="tel" class="form-control" id="telefonoempresa" name="telefonoempresa" #telefonoempresa="ngModel" [(ngModel)]="cliente.telefonoempresa"
+                          required>
+                        <div *ngIf="f.submitted && !telefonoempresa.valid" class="help-block">Telefono Empresa es requerido</div>
+                      </div>
+                      <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !direccionempresa.valid }">
+                        <label for="">Dirección</label>
+                        <input type="text" class="form-control" id="direccionempresa" name="direccionempresa" #direccionempresa="ngModel" [(ngModel)]="cliente.direccionempresa"
+                          required>
+                        <div *ngIf="f.submitted && !direccionempresa.valid" class="help-block">Dirección Empresa es requerido</div>
+                      </div>
+                  
+                      <div class="form-group" [ngClass]="{ 'has-error': !regionValido }">
+                        <label for="region">Región </label>
+                        <select class="form-control" #selectedRegion (change)="cambiaCiudad(selectedRegion.value)" name="region1" #region1="ngModel"
+                          [(ngModel)]="cliente.regionempresa" id="region1">
+                          <option *ngFor="let region of _is.regiones" [value]="region[0]">{{region[1]}}</option>
+                        </select>
+                        <div *ngIf="f.submitted && !regionValido" class="help-block">Debe seleccionar una region</div>
+                      </div>
+                  
+                      <div class="form-group" [ngClass]="{ 'has-error': !ciudadValido }">
+                        <label for="ciudad">Ciudad </label>
+                        <select *ngIf="_is.ciudades.length > 0" #selectedCiudad class="form-control" (change)="cambiaComuna(selectedCiudad.value)"
+                          #ciudad1="ngModel" name="ciudad1" id="ciudad1" [(ngModel)]="cliente.ciudadempresa">
+                          <option *ngFor="let ciudad of _is.ciudades" [value]="ciudad[0]">{{ciudad[1]}}</option>
+                        </select>
+                        <div *ngIf="f.submitted && !ciudadValido" class="help-block">Debe seleccionar una ciudad</div>
+                      </div>
+                  
+                      <div class="form-group" [ngClass]="{ 'has-error': !comunaValido }">
+                        <label for="comuna">Comuna </label>
+                        <select *ngIf="_is.comunas.length > 0" #selectedComuna class="form-control" id="input-select" name="input-select" #comuna1="ngModel"
+                          name="comuna1" id="comuna1" [(ngModel)]="cliente.comunaempresa">
+                          <option *ngFor="let comuna of _is.comunas" [value]="comuna[0]">{{comuna[1]}}</option>
+                        </select>
+                        <div *ngIf="f.submitted && !comunaValido" class="help-block">Debe seleccionar una comuna</div>
+                      </div>
+                  
+                  
+                    </div>
 
-                  <div class="form-group required">
-                    <label for="">R.U.T  de la empresa</label>
-                    <input type="text" class="form-control" id="">
-                  </div>
-
-                  <div class="form-group required">
-                    <label for="">Giro</label>
-                    <input type="text" class="form-control" id="">
-                  </div>
-
-                   <div class="form-group required">
-                    <label for="">Dirección</label>
-                    <input type="text" class="form-control" id="">
-                  </div>
-
-                  <div class="form-group required">
-                    <label for="">Región </label>
-                      <select class="form-control" id="input-select" name="input-select">
-                        <option value="">. </option>
-                        <option value="1">1 </option>
-                        <option value="2">2 </option>
-                        <option value="3">3 </option>
-                        <option value="4">4 </option>
-                    </select>
-                  </div>
-
-                   <div class="form-group required">
-                    <label for="">Recibo </label>
-                      <select class="form-control" id="input-select" name="input-select">
-                        <option value="">. </option>
-                        <option value="1">Boleta </option>
-                        <option value="2">Factura </option>
-
-                    </select>
-                  </div>
-
-                  <div class="form-group required">
-                    <label for="">Teléfono</label>
-                    <input type="tel" class="form-control" id="" >
-                  </div>
-
-                  <p>  <button type="button" class="btn btn-default btn-lg">Guardar datos</button></p>
+                  <p>  <button type="button" (click)="savefactura()" class="btn btn-default btn-lg">Guardar datos</button></p>
+                 </form> 
             </div>
             </div>
           </div>
