--- a/src/app/components/instalacion/instalacion.component.html
+++ b/src/app/components/instalacion/instalacion.component.html
@@ -377,7 +377,7 @@
 
             <tr style="text-align:center;">
               <td class="col-sm-6">
-                <button type="button" routerlink="/" class="btn btn-default btn-lg btn-block">Comprar</button>
+                <button type="button" routerlink="/categoria" class="btn btn-default btn-lg btn-block">Comprar</button>
               </td>
               <td class="col-sm-6">
                 <button type="submit" routerLink="/registro" class="btn btn-primary btn-lg btn-block">Crear cuenta</button>
