--- a/src/app/components/bremsen/bremsen.component.html
+++ b/src/app/components/bremsen/bremsen.component.html
@@ -27,12 +27,39 @@
                 &nbsp;
 
             </div>
+
         </div>
         <!--row-->
         <div class="pad-50">&nbsp;</div>
         <div class="pad-10">&nbsp;</div>
         <div class="pad-10">&nbsp;</div>
     </div>
+
+    <owl-carousel #owlElement [options]="{items: 3, autoPlay: 5000, stopOnHover: true,  
+    slideSpeed : 300, paginationSpeed : 400, singleItem : true}" [items]="productos" *ngIf="productos.length>0">
+    
+        <div class="product-thumb" *ngFor="let producto of productos">
+            <div class="image" style="line-height: 40px;">
+                <a routerLink="/producto/{{producto.ID}}">
+                    <img src="assets/image/product/540x576.jpg" class="img-responsive responsivo" />
+                </a>
+            </div>
+            <div class="caption">
+                <h4>
+                    <a routerLink="/producto/{{producto.ID}}">{{producto.MARCA}} {{producto.MODELO}}</a>
+                </h4>
+                <p class="price">{{producto.PRECIO_FINAL | number | currencyFormat}} </p>
+            </div>
+            <div>
+                <button class="btn btn-primary btn-sm" routerLink="/producto/{{producto.ID}}">
+                    <span>Ver producto</span>
+                </button>
+            </div>
+        </div>
+    
+    
+    
+    </owl-carousel>
 </div>
 
 
